--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
   },
   "private": true,
   "dependencies": {
+    "@hono/react-renderer": "^0.3.0",
     "hono": "^4.7.5",
-    "honox": "^0.1.38"
+    "honox": "^0.1.38",
+    "qrcode.react": "^4.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
     "@hono/vite-build": "^1.3.0",
-    "@hono/vite-dev-server": "^0.18.2",
-    "@tailwindcss/vite": "^4.0.9",
-    "tailwindcss": "^4.0.9",
-    "vite": "^6.1.1",
-    "wrangler": "^3.109.2"
+    "@hono/vite-dev-server": "^0.19.0",
+    "@tailwindcss/vite": "^4.0.14",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "tailwindcss": "^4.0.14",
+    "vite": "^6.2.2",
+    "wrangler": "^4.2.0"
   }
 }
